created run_all.yml and added sshd_config change to set_rootpassword.yml

--- a/ansible/set_rootpassword.yml
+++ b/ansible/set_rootpassword.yml
@@ -6,4 +6,13 @@
   remote_user: root
   gather_facts: false
   tasks:
-    - user: name=root password="{{ root_password | string | password_hash('sha512') }}"
+    - name: Set passwordAuthentication yes
+      lineinfile:
+        path: /etc/ssh/sshd_config
+        regex: ^#PasswordAuthentication(.*[yes|no])
+        line: PasswordAuthentication yes
+    - name: restart ssh
+      service:
+        name: ssh
+        state: reloaded
+    - user: name=root password={{ root_password | string | password_hash('sha512') }}
