created run_all.yml and added sshd_config change to set_rootpassword.yml

--- a/ansible/set_rootpassword.yml
+++ b/ansible/set_rootpassword.yml
@@ -9,6 +9,7 @@
     - name: Set passwordAuthentication yes
       lineinfile:
         path: /etc/ssh/sshd_config
+        # works because comments in sshd_config start with: '# ', defaults with: '#'
         regex: ^#PasswordAuthentication(.*[yes|no])
         line: PasswordAuthentication yes
     - name: restart ssh
