created run_all.yml and added sshd_config change to set_rootpassword.yml

--- a/ansible/set_rootpassword.yml
+++ b/ansible/set_rootpassword.yml
@@ -6,13 +6,13 @@
   remote_user: root
   gather_facts: false
   tasks:
-    - name: Set passwordAuthentication yes
+    - name: Set PasswordAuthentication yes in sshd_config
       lineinfile:
         path: /etc/ssh/sshd_config
         # works because comments in sshd_config start with: '# ', defaults with: '#'
         regex: ^#PasswordAuthentication(.*[yes|no])
         line: PasswordAuthentication yes
-    - name: restart ssh
+    - name: reload ssh
       service:
         name: ssh
         state: reloaded
