--- a/ansible/set_rootpassword.yml
+++ b/ansible/set_rootpassword.yml
@@ -3,8 +3,7 @@
 - hosts: randoriv2
   vars_files:
     - secrets.yml
-  remote_user: root
-  gather_facts: false
+    - variables.yml
   tasks:
     - name: Set PasswordAuthentication yes in sshd_config
       lineinfile:
