--- a/ansible/build_essentials.yml
+++ b/ansible/build_essentials.yml
@@ -1,30 +1,10 @@
 ---
 
 - hosts: randoriv2
-  remote_user: root
-  gather_facts: false
-  vars:
-    pkgs:
-      # apparently, libzmq3-dev provides libzmq5-dev
-      # which really is 4.3.2:
-      # pkg-config --modversion libzmq
-      #   4.3.2
-      - build-essential
-      - libpam0g-dev
-      - telnetd
-      - dpatch
-      - fakeroot
-      - devscripts
-      - equivs
-      - lintian
-      - quilt
-      - dpkg-dev
-      - dh-autoreconf
-      - dh-systemd
-      - libzmq3-dev
-      - pkg-config
+  vars_files:
+    - variables.yml
   tasks:
     - name: Install packages used for building software
       apt:
-        name: "{{ pkgs }}"
+        name: "{{ build_install_pkgs }}"
         state: present
