--- a/ansible/upgrade_reboot.yml
+++ b/ansible/upgrade_reboot.yml
@@ -1,7 +1,8 @@
 ---
 
 - hosts: randoriv2
-  remote_user: root
+  vars_files:
+    - variables.yml
   tasks:
     - name: Check if a reboot is needed on all servers
       register: reboot_required_file
