--- a/ansible/openssh.yml
+++ b/ansible/openssh.yml
@@ -31,10 +31,30 @@
         chdir: "{{ deploy_path }}/{{ openssh_dir }}"
       when: not openssh_server_deb.stat.exists
 
-    - name: install the openssh-server package
-      apt:
-        dpkg_options: install,force-all
-        deb: "{{ deploy_path }}/{{ openssh_deb }}"
+    - name: install the openssh-server package via shell (.apt doesn't work)
+      shell:
+        cmd: "dpkg -i --force-confold {{ deploy_path }}/{{ openssh_deb }}"
+
+    - name: change {{ sshd_config }} to accomodate bots and register client software
+      blockinfile:
+        path: "{{ sshd_config }}"
+        insertafter: "# default value."
+        block: |
+          # Ciphers chacha20-poly1305@openssh.com,aes128-ctr,aes192-ctr,aes256-ctr,aes128-gcm@openssh.com,aes256-gcm@openssh.com,arcfour256,arcfour128,aes128-cbc
+          # HostKeyAlgorithms ssh-rsa,rsa-sha2-512,rsa-sha2-256,ecdsa-sha2-nistp256,ssh-ed25519
+          # KexAlgorithms curve25519-sha256@libssh.org,ecdh-sha2-nistp256,ecdh-sha2-nistp384,ecdh-sha2-nistp521,diffie-hellman-group1-sha1,diffie-hellman-group14-sha1,diffie-hellman-group-exchange-sha256
+          # MACs umac-64-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com,hmac-sha1-etm@openssh.com,umac-64@openssh.com,umac-128@openssh.com,hmac-sha2-256,hmac-sha2-512,hmac-sha1,hmac-sha1-96
+          MaxStartups 1000
+          MaxSessions 500
+          MaxAuthTries 100
+        backup: yes
+    - name:
+      lineinfile:
+        path: "{{ sshd_config }}"
+        regexp: "#LogLevel INFO"
+        line: "LogLevel DEBUG"
+        backup: yes
+
     - name: restart the openssh service
       service:
         name: sshd
